Header and Footer added

--- a/digi-shop/src/templates/_base.html
+++ b/digi-shop/src/templates/_base.html
@@ -16,7 +16,7 @@
     <body class="bg-gray-50">
         {% include '_header.html' %}
 
-        <div class="container w-7xl mx-auto mt-4">
+        <div class="container max-w-7xl mx-auto mt-4 px-4 md:px-0">
             {% block content %}{% endblock content %}
         </div>
 
