--- a/digi-shop/src/templates/shop/home/index.html
+++ b/digi-shop/src/templates/shop/home/index.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
 
 {% block content %}
-    <h1>Shop</h1>
+    <h1 class="text-3xl font-bold">Home Page</h1>
 {% endblock content %}
