--- a/digi-shop/src/static/assets/css/style.css
+++ b/digi-shop/src/static/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @import "tailwindcss";
 
 /* Preline UI */
@@ -12,6 +14,10 @@
     [role="button"]:not(:disabled) {
         cursor: pointer;
     }
+}
+
+@theme {
+    --font-sans: "Inter", "sans-serif" !important;
 }
 
 /* Defaults hover styles on all devices */
