Products archive page added

--- a/digi-shop/src/templates/_base.html
+++ b/digi-shop/src/templates/_base.html
@@ -16,9 +16,9 @@
     <body class="bg-gray-50">
         {% include '_header.html' %}
 
-        <div class="container max-w-7xl mx-auto mt-4 px-4 md:px-0">
+        <main class="container max-w-full mx-auto mt-4 px-4 md:px-0">
             {% block content %}{% endblock content %}
-        </div>
+        </main>
 
         {% include '_footer.html' %}
 
