--- a/digi-shop/src/templates/shop/home/index.html
+++ b/digi-shop/src/templates/shop/home/index.html
@@ -1,5 +1,184 @@
 {% extends "_base.html" %}
 
+{% load static i18n %}
+
 {% block content %}
-    <h1 class="text-3xl font-bold">Home Page</h1>
+    <div class="container mx-auto">
+        {# Slider #}
+        <div data-hs-carousel='{
+        "loadingClasses": "opacity-0",
+        "isDraggable": true,
+        "isAutoPlay": false
+        }' class="relative">
+            <div class="hs-carousel relative overflow-hidden w-full min-h-96 bg-white rounded-lg">
+                <div class="hs-carousel-body absolute top-0 bottom-0 start-0 flex flex-nowrap transition-transform duration-700 opacity-0">
+                    <div class="hs-carousel-slide">
+                        <div class="flex justify-center h-full bg-gray-100 relative">
+                            <img src="{% static 'assets/images/placeholder.svg' %}" alt="Slide Image" class="w-full h-full object-cover rounded-lg">
+                            <div class="absolute inset-0 bg-black opacity-30 rounded-lg"></div>
+                            <span class="absolute inset-0 flex items-center justify-center text-4xl text-white font-bold transition duration-700 z-10">Slide 1</span>
+                        </div>
+                    </div>
+                    <div class="hs-carousel-slide">
+                        <div class="flex justify-center h-full bg-gray-100 relative">
+                            <img src="{% static 'assets/images/placeholder.svg' %}" alt="Slide Image" class="w-full h-full object-cover rounded-lg">
+                            <div class="absolute inset-0 bg-black opacity-30 rounded-lg"></div>
+                            <span class="absolute inset-0 flex items-center justify-center text-4xl text-white font-bold transition duration-700 z-10">Slide 2</span>
+                        </div>
+                    </div>
+                    <div class="hs-carousel-slide">
+                        <div class="flex justify-center h-full bg-gray-100 relative">
+                            <img src="{% static 'assets/images/placeholder.svg' %}" alt="Slide Image" class="w-full h-full object-cover rounded-lg">
+                            <div class="absolute inset-0 bg-black opacity-30 rounded-lg"></div>
+                            <span class="absolute inset-0 flex items-center justify-center text-4xl text-white font-bold transition duration-700 z-10">Slide 3</span>
+                        </div>
+                    </div>
+                </div>
+                <button type="button"
+                        class="hs-carousel-prev hs-carousel-disabled:opacity-50 hs-carousel-disabled:pointer-events-none absolute inset-y-0 start-0 inline-flex justify-center items-center w-11.5 h-full text-gray-800 hover:bg-gray-800/10 focus:outline-hidden focus:bg-gray-800/10 rounded-s-lg">
+                <span class="text-2xl" aria-hidden="true">
+                    <svg class="shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                         stroke-linecap="round" stroke-linejoin="round">
+                        <path d="m15 18-6-6 6-6"></path>
+                    </svg>
+                </span>
+                    <span class="sr-only">Previous</span>
+                </button>
+                <button type="button"
+                        class="hs-carousel-next hs-carousel-disabled:opacity-50 hs-carousel-disabled:pointer-events-none absolute inset-y-0 end-0 inline-flex justify-center items-center w-11.5 h-full text-gray-800 hover:bg-gray-800/10 focus:outline-hidden focus:bg-gray-800/10 rounded-e-lg">
+                    <span class="sr-only">Next</span>
+                    <span class="text-2xl" aria-hidden="true">
+                    <svg class="shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                         stroke-linecap="round" stroke-linejoin="round">
+                      <path d="m9 18 6-6-6-6"></path>
+                    </svg>
+                </span>
+                </button>
+            </div>
+        </div>
+
+        {# Categories #}
+        <div class="mt-32 text-center">
+            <h2 class="text-3xl font-bold text-gray-900 mb-2">
+                {% translate 'Product Categories' %}
+            </h2>
+            <p class="text-lg text-gray-600 mb-6">
+                {% blocktranslate %}Browse through our wide range of product categories{% endblocktranslate %}
+            </p>
+
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-4 mt-8">
+                {% for category in categories %}
+                    <a href="{{ category.link }}" class="flex flex-col items-center p-6 bg-gray-100 rounded-lg hover:bg-gray-200 transition-all duration-300">
+                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+                            {% if category.image == 'laptop' %}
+                                <path d="M20 16V7a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v9m16 0H4m16 0 1.28 2.55a.5.5 0 0 1-.44.72H3.16a.5.5 0 0 1-.44-.72L4 16"></path>
+                            {% elif category.image == 'smartphone' %}
+                                <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+                                <line x1="12" y1="18" x2="12.01" y2="18"></line>
+                            {% elif category.image == 'watch' %}
+                                <rect x="6" y="7" width="12" height="10" rx="3" ry="3"></rect>
+                                <path d="M8 7V4a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v3"></path>
+                                <path d="M8 17v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3"></path>
+                                <circle cx="12" cy="12" r="1"></circle>
+                            {% elif category.image == 'tv' %}
+                                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                                <line x1="8" y1="21" x2="16" y2="21"></line>
+                                <line x1="12" y1="17" x2="12" y2="21"></line>
+                            {% elif category.image == 'gamepad' %}
+                                <line x1="6" y1="11" x2="10" y2="11"></line>
+                                <line x1="8" y1="9" x2="8" y2="13"></line>
+                                <line x1="15" y1="12" x2="15.01" y2="12"></line>
+                                <line x1="18" y1="10" x2="18.01" y2="10"></line>
+                                <path d="M17.32 5H6.68a4 4 0 0 0-3.978 3.59c-.006.052-.01.101-.017.152C2.604 9.416 2 14.456 2 16a3 3 0 0 0 3 3c1 0 1.5-.5 2-1l1.414-1.414A2 2 0 0 1 9.828 16h4.344a2 2 0 0 1 1.414.586L17 18c.5.5 1 1 2 1a3 3 0 0 0 3-3c0-1.545-.604-6.584-.685-7.258-.007-.05-.011-.1-.017-.151A4 4 0 0 0 17.32 5z"></path>
+                            {% elif category.image == 'headphones' %}
+                                <path d="M12 2a6 6 0 0 1 6 6v8a6 6 0 0 1-12 0V8a6 6 0 0 1 6-6Z"></path>
+                                <path d="M12 2v6"></path>
+                            {% endif %}
+                        </svg>
+                        <span class="text-gray-800 font-medium">{% translate category.name %}</span>
+                        <small class="text-gray-500">{{ category.product_count }} {% translate 'products' %}</small>
+                    </a>
+                {% endfor %}
+            </div>
+        </div>
+
+        {# Featured Products #}
+        <div class="mt-32">
+            <h2 class="text-3xl font-bold text-gray-900 mb-2">
+                {% translate 'Featured Products' %}
+            </h2>
+            <p class="text-lg text-gray-600 mb-6">
+                {% blocktranslate %}Browse through our featured products that are handpicked for you{% endblocktranslate %}
+            </p>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-8">
+                {% for product in featured_products %}
+                    {% include 'components/_product_card.html' with product=product %}
+                {% endfor %}
+            </div>
+        </div>
+
+        {# Trust us #}
+        <div class="mt-32">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <!-- Free Shipping -->
+                <div class="flex flex-col items-center text-center p-5 rounded-xl bg-gray-100 hover:bg-gray-200">
+                    <div class="mb-4 text-black">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round"
+                             stroke-linejoin="round" class="lucide lucide-truck-icon lucide-truck">
+                            <path d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"></path>
+                            <path d="M15 18H9"></path>
+                            <path d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"></path>
+                            <circle cx="17" cy="18" r="2"></circle>
+                            <circle cx="7" cy="18" r="2"></circle>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">{% translate 'Free Shipping' %}</h3>
+                    <small class="text-gray-500">{% translate 'Free shipping on all US order or order above $200' %}</small>
+                </div>
+
+                <!-- 24x7 Support -->
+                <div class="flex flex-col items-center text-center p-5 rounded-xl bg-gray-100 hover:bg-gray-200">
+                    <div class="mb-4 text-black">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round"
+                             stroke-linejoin="round" class="lucide lucide-headset-icon lucide-headset">
+                            <path d="M3 11h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-5Zm0 0a9 9 0 1 1 18 0m0 0v5a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3Z"></path>
+                            <path d="M21 16v2a4 4 0 0 1-4 4h-5"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">{% translate '24X7 Support' %}</h3>
+                    <small class="text-gray-500">{% translate 'Contact us 24 hours a day, 7 days a week' %}</small>
+                </div>
+
+                <!-- 30-day Return -->
+                <div class="flex flex-col items-center text-center p-5 rounded-xl bg-gray-100 hover:bg-gray-200">
+                    <div class="mb-4 text-black">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round"
+                             stroke-linejoin="round" class="lucide lucide-refresh-ccw-icon lucide-refresh-ccw">
+                            <path d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"></path>
+                            <path d="M3 3v5h5"></path>
+                            <path d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"></path>
+                            <path d="M16 16h5v5"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">{% translate '30 Days Return' %}</h3>
+                    <small class="text-gray-500">{% translate 'Simply return it within 30 days for an exchange' %}</small>
+                </div>
+
+                <!-- Payment Secure -->
+                <div class="flex flex-col items-center text-center p-5 rounded-xl bg-gray-100 hover:bg-gray-200">
+                    <div class="mb-4 text-black">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round"
+                             stroke-linejoin="round" class="lucide lucide-circle-dollar-sign-icon lucide-circle-dollar-sign">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <path d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"></path>
+                            <path d="M12 18V6"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">{% translate 'Payment Secure' %}</h3>
+                    <small class="text-gray-500">{% translate 'Your payment information is always secure' %}</small>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
