Category/Brand archive/single page added

--- a/digi-shop/src/templates/_header.html
+++ b/digi-shop/src/templates/_header.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<header class="bg-white border-b border-gray-200 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
+<header class="bg-white border-b border-gray-200 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full sticky top-0">
     <nav class="relative max-w-[85rem] w-full md:flex md:items-center md:justify-between md:gap-3 mx-auto px-4 sm:px-6 lg:px-8 py-2">
         <div class="flex items-center justify-between">
             {% include 'components/_logo.html' with has_title=True %}
