Product pages added

--- a/digi-shop/src/templates/shop/home/index.html
+++ b/digi-shop/src/templates/shop/home/index.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block content %}
-    <div class="container mx-auto">
+    <section class="container mx-auto">
         {# Slider #}
         <div data-hs-carousel='{
         "loadingClasses": "opacity-0",
@@ -158,5 +158,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 {% endblock content %}
