--- a/digi-shop/src/templates/_footer.html
+++ b/digi-shop/src/templates/_footer.html
@@ -12,7 +12,7 @@
         <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
             <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
                href="#">
-                {% translate 'Privacy Policy' %}
+                {% translate 'Terms and Condition' %}
             </a>
         </li>
         <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
@@ -30,7 +30,13 @@
         <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
             <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
                href="#">
-                {% translate 'FAQs' %}
+                {% translate 'Contact' %}
+            </a>
+        </li>
+        <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
+            <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
+               href="#">
+                {% translate 'FAQ' %}
             </a>
         </li>
     </ul>
