Cart added + Celery

--- a/digi-shop/src/static/assets/css/style.css
+++ b/digi-shop/src/static/assets/css/style.css
@@ -4,6 +4,7 @@
 
 /* Preline UI */
 @import "../../../node_modules/preline/variants.css";
+@import "./cart.css";
 
 /* Plugins */
 /* @plugin "@tailwindcss/forms"; */
